tests/NormalTests/paczka2/big_fuzzy/73359138.err
Error in line 23: 2WwTV8pW S547 56,58
Error in line 25: S547 A51L L2,6
Error in line 22: S547 A513 62,6
Error in line 15: tR5Wk4 A827 315,9
Error in line 35: tR5Wk4 A772 76,5
Error in line 56: wwl7nYhA A772 40,8
Error in line 62: wwl7nYhA A827 4,4
Error in line 72: vjsFv S5.7 15,.
Error in line 63: wwl7nYhA A772 89,2
Error in line 76: ?A77"
Error in line 18: 2WwTV8pW S547 13,0
Error in line 87: wwl7nYhA A513 71,9
Error in line 91: wwl7nYhA S547 57,5
Error in line 78: WPYww A513 7,1
Error in line 100: WPYww A827 87,8
Error in line 97: cR2RI A827 91,9
Error in line 102: WPYww A513 98,3
Error in line 84: vjsFv S547 27,4
Error in line 129: S547 A827 31,2
Error in line 132: S547 S547 65,1
Error in line 135: cR2RI A827 329,2
Error in line 123: WPYww A772 25,2
Error in line 138: cR2RI A772 13,2
Error in line 148: S547 S547 59,08
Error in line 150: S547 S547 113,6
Error in line 152: S547 A772 80,1
Error in line 154: S547 A827 98,9
Error in line 143: 2WwTV8pW S547 43,9
Error in line 164: 2WwTV8pW A772 16,2
Error in line 140: tR5Wk4 S547 93,1
Error in line 117: vjsFv A827 152,2
Error in line 180: cR2RI A827 17,0
Error in line 183: vjsFv A827 21,32
Error in line 186: tR5Wk4 S547 -5,2
Error in line 187: wwl7nYhA A513 61,9
Error in line 177: vjsFv A772 32,3
Error in line 169: S547 S547 70,9
Error in line 197: WPYww A513 137,6
Error in line 198: S547 A827 50,9
Error in line 200: S547 A772 22,8
Error in line 184: tR5Wk4 S547 95,1
Error in line 201: S547 A513 38,1
Error in line 205: S547 S547 54,3
Error in line 195: vjsFv A827 92,0
Error in line 220: S547 S547 400,8
Error in line 225: tR5Wk4 A513 82,0
Error in line 227: vjsFv A772 85,8
Error in line 230: S547 A827 68,3
Error in line 242: S547 A772 87,4
Error in line 245: wwl7nYhA S547 90,7
